added check exercise links for convenience

--- a/exercise1-1/exercise1-1.html
+++ b/exercise1-1/exercise1-1.html
@@ -54,6 +54,7 @@ function draw() {
   fallingStar.fall(2);
   fallingStar.draw();
 }</pre>
+            <p>Check your work by running <a href="./check-exercise1-1.html">check-exercise1-1.html</a>.</p>
             <p>Expected output:</p>
             <p>
                 <video width="400" height="400" controls>
@@ -68,7 +69,7 @@ function draw() {
             </button>
             <div class="collapse" id="hint">
                 <div class="card card-body">
-                    <p>You will find it helpful to have the bouncingBallsOO example from lecture open to use as reference. You can find all example code in the <a href="https://github.com/UoY-IM-PDM/PDM1-example-code" target="_blank">PDM1-example-code repo</a>.</p>
+                    <p>You will find it helpful to have the bouncingBallsOO example from lecture open to use as reference. You can find all example code in the <a href="https://github.com/UoY-PDM1/PDM1-example-code" target="_blank">PDM1-example-code repo</a>.</p>
                     <p>The main thing to remember (that people often forget), is that when referencing instance variables from within 
                         the class, you need to type <code>this.</code> before the variable name. You can see lots of examples of this in 
                         the bouncingBallsOO example code.
