--- a/exercise1-2/exercise1-2.html
+++ b/exercise1-2/exercise1-2.html
@@ -36,6 +36,7 @@ console.log(coordinate.isInBounds(0, 0, 200, 100)); // prints false
                 happens. Use your <code>Coordinate</code> class and the <code>isInBounds()</code> method to 
                 figure out if an ellipse should be drawn.
             </p>
+            <p>Check your work by running <a href="./check-exercise1-2.html">check-exercise1-2.html</a>.</p>
             <p>Expected output:</p>
             <p>
                 <video width="490" height="495" controls>
