--- a/exercise1-3/exercise1-3.html
+++ b/exercise1-3/exercise1-3.html
@@ -46,6 +46,7 @@
                 <li>Increment a global variable called <code>counter</code> every time the button is clicked.</li>
                 <li>Display the number of times the button has been clicked.</li>
             </ul>
+            <p>Check your work by running <a href="./check-exercise1-3.html">check-exercise1-3.html</a>.</p>
             <p>Expected output:</p>
             <p>
                 <video width="400" height="400" controls>
